# api/model/role.go
@@ -1,0 +1,8 @@
+package model
+
+import "github.com/RucardTomsk/BackendOnboarding/internal/domain/base"
+
+type GetRoles struct {
+	base.ResponseOK
+	Roles []string
+}
